# RISCV_Emulator

./: CMakeLists.txt  README.md
Python_Script/: RISCV_Test.py  rv64a.pl  rv64i.pl  rv64m.pl
RISCV_elf/: Hello.c  hello_world.elf  hello_world.readelf  rv64ui-p-add
dtb/: ALISS.dtb
include/: ALISS.h  Ins.h  csr.h
src/: ALISS.cpp  main.cpp
src/test/: test_main.cpp
